Update on fix white space

--- a/css/home.sass
+++ b/css/home.sass
@@ -20,7 +20,7 @@ body
   width: 100% !important
   padding: 0
   margin: 0
-  padding-bottom: 20px
+  padding-bottom: 200px
 
 .container
   margin: auto
